// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index page render is match snapshot with logged in user 1`] = `
"<div class=\\"w-screen flex flex-col items-center py-2\\">
  <div class=\\"py-3 px-2\\">
    <h1 class=\\"w-full text-center text-2xl\\">
      ToDo List
    </h1> <span class=\\"text-gray-400 text-sm\\">
      by <a href=\\"https://github.com/OorfeneD\\" title=\\"GitHub OorfeneD\\" class=\\"text-blue-300 hover:bg-gray-100 hover:text-blue-500 transition p-1 rounded\\"><icon-stub github=\\"true\\"></icon-stub> OorfeneD</a></span>
  </div>
  <div class=\\"w-full sm:w-96 rounded-0 sm:rounded-xl border border-gray-100 shadow-md p-5\\">
    <add-todo-stub></add-todo-stub>
    <todo-list-stub></todo-list-stub>
  </div>
</div>"
`;

exports[`index page render is match snapshot with logged out user 1`] = `
"<div class=\\"w-screen flex flex-col items-center py-2\\">
  <div class=\\"py-3 px-2\\">
    <h1 class=\\"w-full text-center text-2xl\\">
      ToDo List
    </h1> <span class=\\"text-gray-400 text-sm\\">
      by <a href=\\"https://github.com/OorfeneD\\" title=\\"GitHub OorfeneD\\" class=\\"text-blue-300 hover:bg-gray-100 hover:text-blue-500 transition p-1 rounded\\"><icon-stub github=\\"true\\"></icon-stub> OorfeneD</a></span>
  </div>
  <div>
    Authenticate to work with TODOs
  </div>
</div>"
`;
